# PluginManager

./: CMakeLists.txt  README.md
src/: Directory.cpp  Directory.h  DynamicLibrary.cpp  DynamicLibrary.h  Plugin.h  PluginManager.cpp  PluginManager.h  main.cc
src/plugins/: FirstPlugin.cpp  FirstPlugin.h  Register.cpp  Register.h
